# ibus-unikey

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Doxyfile  Makefile.am  README.md  TODO.md  autogen.sh  browser.sh  configure.ac  ibus-unikey.spec.in  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.md
debian/: changelog  control  copyright  rules
docs/unikey/: fileIndex  index.html
docs/unikey/fnSearch/: _b  _c  _f  _m  _p  _s  _v  ad  al  ap  ba  by  ca  ch  cm  di  do  el  en  ex  fi  fo  fr  ge  go  he  la  ne  nu  op  pa  pe  po  pu  re  sc  se  sh  sp  th  (+6 more)
docs/unikey/include/: alloca.h.html  check.h.html  check_stdint.h.html  ctype.h.html  locale.h.html  pthread.h.html  sched.h.html  stdc-predef.h.html  stdio.h.html  stdlib.h.html  wctype.h.html
docs/unikey/refs/: (anonymous)::close  (anonymous)::fds_bits  (anonymous)::quot  (anonymous)::read  (anonymous)::rem  (anonymous)::write  AZLexiLower  AZLexiUpper  CMacroTable  CMacroTable::m_count  CMacroTable::m_macroMem  CMacroTable::m_memSize  CMacroTable::m_occupied  CMacroTable::m_table  CSeqList  CVnCharsetLib  CVnCharsetLib::m_VIQROutEscPatterns  CVnCharsetLib::m_options  CVnCharsetLib::m_pUniCString  CVnCharsetLib::m_pUniCompCharset  CVnCharsetLib::m_pUniUTF8  CVnCharsetLib::m_pVIQRCharObj  CVnCharsetLib::m_pVnIntCharset  CVnCharsetLib::m_pWinCP1258  CharsetCount  ConSeq  ConSeq::cs_b  ConSeq::cs_c  ConSeq::cs_ch  ConSeq::cs_d  ConSeq::cs_dd  ConSeq::cs_g  ConSeq::cs_gh  ConSeq::cs_gi  ConSeq::cs_gin  ConSeq::cs_l  ConSeq::cs_m  ConSeq::cs_n  ConSeq::cs_ng  ConSeq::cs_nil  (+870 more)
icons/: meson.build
po/: Makevars  POTFILES.in  meson.build  vi.po
public/: index.html
setup/: Makefile.am  dlg_main_setup.cpp  dlg_main_setup.h  meson.build  setup-main.ui  setup.cpp
src/: Makefile.am  engine.cpp  engine.h  engine_const.h  engine_private.h  main.cpp  meson.build  unikey.xml.in  unikey.xml.in.in  utils.cpp  utils.h
test/: meson.build  test_inputproc.cc  test_ukengine.cc
ukengine/: README  meson.build  ukengine.cpp
unikey/: fileIndex  index.html
unikey/fnSearch/: _c  _f  _g  _i  ap  as  at  ba  bi  bo  ch  cl  co  cr  cv  de  en  eo  ep  er  ex  fa  fi  fl  fp  g_  ge  ha  ib  im  in  is  ke  la  le  lo  ma  me  mo  mu  (+21 more)
unikey/include/: alloca.h.html  check.h.html  check_stdint.h.html  ctype.h.html  dirent.h.html  endian.h.html  errno.h.html  features.h.html  libintl.h.html  limits.h.html  locale.h.html  memory.h.html  pthread.h.html  sched.h.html  search.h.html  signal.h.html  stdc-predef.h.html  stdint.h.html  stdio.h.html  stdlib.h.html  string.h.html  strings.h.html  time.h.html  unistd.h.html  wchar.h.html  wctype.h.html
unikey/include/asm-generic/: errno-base.h.html  errno.h.html
unikey/include/cairo/: cairo-deprecated.h.html  cairo-features.h.html  cairo-version.h.html  cairo.h.html
unikey/include/glib-2.0/: glib-object.h.html  glib.h.html  gmodule.h.html
unikey/include/ibus-1.0/: ibus.h.html  ibusattribute.h.html  ibusattrlist.h.html  ibusbus.h.html  ibuscomponent.h.html  ibusconfig.h.html  ibusconfigservice.h.html  ibusdebug.h.html  ibusemoji.h.html  ibusengine.h.html  ibusenginedesc.h.html  ibusenginesimple.h.html  ibusenumtypes.h.html  ibuserror.h.html  ibusfactory.h.html  ibushotkey.h.html  ibusinputcontext.h.html  ibuskeymap.h.html  ibuskeys.h.html  ibuskeysyms-compat.h.html  ibuskeysyms.h.html  ibuslookuptable.h.html  ibusobject.h.html  ibusobservedpath.h.html  ibuspanelservice.h.html  ibusproperty.h.html  ibusproplist.h.html  ibusproxy.h.html  ibusregistry.h.html  ibusserializable.h.html  ibusservice.h.html  ibusshare.h.html  ibustext.h.html  ibustypes.h.html  ibusutil.h.html  ibusversion.h.html  ibusxml.h.html
unikey/include/linux/: errno.h.html  limits.h.html
unikey/refs/: (anonymous)::__cancel_jmp_buf  (anonymous)::ascent  (anonymous)::attributes  (anonymous)::callback  (anonymous)::data  (anonymous)::descent  (anonymous)::height  (anonymous)::index  (anonymous)::log_type  (anonymous)::msgs  (anonymous)::mutex  (anonymous)::n_nums  (anonymous)::n_strings  (anonymous)::name  (anonymous)::nums  (anonymous)::priv  (anonymous)::seek  (anonymous)::strings  (anonymous)::sub_nodes  (anonymous)::test_initialized  (anonymous)::test_perf  (anonymous)::test_quick  (anonymous)::test_quiet  (anonymous)::test_undefined  (anonymous)::test_verbose  (anonymous)::text  (anonymous)::unused  (anonymous)::width  (anonymous)::x  (anonymous)::x_advance  (anonymous)::x_bearing  (anonymous)::y  (anonymous)::y_advance  (anonymous)::y_bearing  (anonymousstruct)::(anonymous)::p  (anonymousstruct)::(anonymousunion)::(anonymous)::si_band  ATK_LAYER_BACKGROUND  ATK_LAYER_CANVAS  ATK_LAYER_INVALID  ATK_LAYER_MDI  (+5835 more)
unikey/refs/_M/: ABS  ATEXIT  ATK_AVAILABLE_IN_2_10  ATK_AVAILABLE_IN_2_12  ATK_AVAILABLE_IN_2_14  ATK_AVAILABLE_IN_2_2  ATK_AVAILABLE_IN_2_4  ATK_AVAILABLE_IN_2_6  ATK_AVAILABLE_IN_2_8  ATK_AVAILABLE_IN_ALL  ATK_CHECK_VERSION  ATK_DEFINE_ABSTRACT_TYPE  ATK_DEFINE_ABSTRACT_TYPE_WITH_CODE  ATK_DEFINE_TYPE  ATK_DEFINE_TYPE_EXTENDED  ATK_DEFINE_TYPE_WITH_CODE  ATK_DEPRECATED  ATK_DEPRECATED_FOR  ATK_DEPRECATED_IN_2_10  ATK_DEPRECATED_IN_2_10_FOR  ATK_DEPRECATED_IN_2_12  ATK_DEPRECATED_IN_2_12_FOR  ATK_DEPRECATED_IN_2_14  ATK_DEPRECATED_IN_2_14_FOR  ATK_DEPRECATED_IN_2_2  ATK_DEPRECATED_IN_2_2_FOR  ATK_DEPRECATED_IN_2_4  ATK_DEPRECATED_IN_2_4_FOR  ATK_DEPRECATED_IN_2_6  ATK_DEPRECATED_IN_2_6_FOR  ATK_DEPRECATED_IN_2_8  ATK_DEPRECATED_IN_2_8_FOR  ATK_IMPLEMENTOR  ATK_IS_IMPLEMENTOR  ATK_IS_OBJECT  ATK_IS_OBJECT_CLASS  ATK_IS_TABLE  ATK_IS_VALUE  ATK_MINOR_VERSION  ATK_OBJECT  (+5429 more)
unikey/unikey/: index.html
unikey/unikey/builddir/: index.html
unikey/unikey/setup/: dlg_macro_table.cpp.html  dlg_macro_table.h.html  dlg_main_setup.cpp.html  dlg_main_setup.h.html  index.html  setup.cpp.html
unikey/unikey/src/: engine.cpp.html  engine.h.html  engine_const.h.html  engine_private.h.html  index.html  main.cpp.html  utils.cpp.html  utils.h.html
unikey/unikey/test/: index.html  test_inputproc.cc.html  test_ukengine.cc.html
unikey/unikey/ukengine/: byteio.cpp.html  byteio.h.html  charset.cpp.html  (+21 more)
(+1105 files in other folders)
