## Producing a coverage report
## http://mesonbuild.com/howtox.html#producing-a-coverage-report

#check_dep = dependency('check')

# test_utf8small = executable(
#     'utf8small',
#     'test_utf8small.c',
#     link_with: libutf8small,
#     include_directories: INC,
#     dependencies: check_dep,
# )

# test('test_utf8small', test_utf8small,
#     is_parallel: false)

# test_bogo = executable(
#     'bogo',
#     'test_bogo.c',
#     link_with: [libbogo, libutf8small],
#     include_directories: INC,
#     dependencies: check_dep,
# )

# test('test_bogo', test_bogo,
#     is_parallel: false,)

# test_inputproc = executable(
#     'inputproc',
#     'test_inputproc.cc',
#     link_with: [libunikey],
#     include_directories: include_directories('../src/charset'),
#     dependencies: check_dep,
# )

# test_inputproc = executable(
#     'ukengine',
#     'test_ukengine.cc',
#     link_with: [libunikey],
#     include_directories: include_directories('../src/charset'),
#     dependencies: check_dep,
# )
