unikey_sources = [
  'byteio.cpp',
  'charset.cpp',
  'convert.cpp',
  'data.cpp',
  'error.cpp',
  'inputproc.cpp',
  'mactab.cpp',
  'pattern.cpp',
  'ukengine.cpp',
  'unikey.cpp',
  'usrkeymap.cpp',
]

libunikey = static_library('unikey',
                           unikey_sources,
                           cpp_args: '-funsigned-char')
